<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tester.vlad.tester.MainActivity">

    <Button
        android:id="@+id/menu_button_run_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_button_run_test"
        android:layout_above="@+id/menu_button_create_test"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/menu_button_create_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_button_create_test"
        android:layout_above="@+id/menu_button_delete_test"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/menu_button_delete_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_button_delete_test"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/menu_button_options_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_button_options_test"
        android:layout_below="@+id/menu_button_delete_test"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/menu_button_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_button_exit"
        android:layout_below="@+id/menu_button_options_test"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
